develop common commit

--- a/site/.env.example
+++ b/site/.env.example
@@ -44,3 +44,5 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 OPEN_REGISTER=1
+CHAPTER_PAGE_SIZE=50
+LIST_PAGE_SIZE=30
